application/web/test/src/main/java/com/tekgs/nextgen/luckyPet/view/error/ErrorViewCalibratable.java
package com.tekgs.nextgen.luckyPet.view.error;

public interface ErrorViewCalibratable {
    String getMessage();
}
